--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>org.online.queue</groupId>
 	<artifactId>OnlineQueueJWT</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>OnlineQueueJWT</name>
 	<description>OnlineQueueJWT</description>
+
+
 	<properties>
 		<java.version>17</java.version>
 	</properties>
